Update email stylesheet to include modification type for each path when available.  Leave modified as normal text color to avoid too much garishness.

--- a/vulcan-web/source/main/docroot/css/standard.css
+++ b/vulcan-web/source/main/docroot/css/standard.css
@@ -699,6 +699,6 @@ iframe {
 	-moz-column-gap: 1em;
 }
 
-.remove {
+ul.modified-paths li.remove {
 	text-decoration: line-through;
 }
